--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/completion/external"]
 	path = modules/completion/external
 	url = https://github.com/zsh-users/zsh-completions.git
+[submodule "modules/prompt/external/agnoster"]
+	path = modules/prompt/external/agnoster
+	url = https://gist.github.com/3712874.git
