--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,9 @@
 [submodule "modules/completion/external"]
 	path = modules/completion/external
 	url = https://github.com/zsh-users/zsh-completions.git
-[submodule "modules/prompt/functions/pure"]
-	path = modules/prompt/external/pure
-	url = https://github.com/sindresorhus/pure.git
 [submodule "modules/autosuggestions/external"]
 	path = modules/autosuggestions/external
 	url = https://github.com/tarruda/zsh-autosuggestions
+[submodule "modules/prompt/external/async"]
+	path = modules/prompt/external/async
+	url = https://github.com/mafredri/zsh-async.git
